--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,8 @@
 {
+  "semi": true,
+  "tabWidth": 2,
   "singleQuote": true,
-  "semi": true
+  "arrowParens": "avoid",
+  "trailingComma": "none",
+  "endOfLine": "lf"
 }
